--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,57 @@
 /*  your css code here. If applicable */
+/*  your css code here. If applicable */
+*{
+	padding:0;
+	margin:0;
+	box-sizing:border-box;
+}
+body{
+	background-color:#f5f5f5;
+}
+header{
+	width:98vw;
+	height:10vh;
+	background-color:#011e29;
+	text-align:center;
+	padding:25px;
+	margin:10px;
+	color:white;
+	\\
+}
+.latest-news-section{
+	width:20vw;
+	height:20vh;
+	background-color:white;
+	border-radius:20px;
+	text-align:center;
+	padding:20px;
+	margin:10px;
+}
+.main-article{
+	width:30vw;
+	height:30vh;
+	background-color:white;
+	border-radius:20px;
+	text-align:center;
+	padding:20px;
+	margin:10px;
+}
+.pictorial-news-section{
+	width:30vw;
+	background-color:white;
+	border-radius:20px;
+	text-align:center;
+	padding:20px;
+	margin:10px;
+}
+img {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+}
+
+
+main{
+	display:flex;
+	justify-content:space-around
+}
